--- a/PracticalTest01Var05/app/src/main/res/values/strings.xml
+++ b/PracticalTest01Var05/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">PracticalTest01Var05</string>
+    <string name="top_left">TOP LEFT</string>
+    <string name="center">CENTER</string>
+    <string name="top_right">TOP RIGHT</string>
+    <string name="bottom_left">BOTTOM LEFT</string>
+    <string name="bottom_right">BOTTOM RIGHT</string>
+    <string name="next_activity">NAVIGATE TO SECONDARY ACTIVITY</string>
 </resources>
